# Pi--

./: .gitignore  CMakeLists.txt
locales/: en.json  ja.json  zh-CN.json
src/: main.cpp
src/agent/: agent.cpp  agent.hpp
src/core/: config.cpp  config.hpp  error.cpp  error.hpp  types.hpp
src/i18n/: i18n.cpp  i18n.hpp
src/provider/: openai.cpp  openai.hpp  provider.cpp  provider.hpp  registry.cpp  registry.hpp
src/session/: message.cpp  message.hpp  session.cpp  session.hpp
src/tools/: bash.cpp  bash.hpp  edit.cpp  edit.hpp  read.cpp  read.hpp  registry.cpp  registry.hpp  search.cpp  search.hpp  tool.cpp  tool.hpp  write.cpp  write.hpp
src/tui/: app.cpp  app.hpp  component.cpp  component.hpp  editor.cpp  editor.hpp  markdown.cpp  markdown.hpp  status_line.cpp  status_line.hpp  term.cpp  term.hpp  text.cpp  text.hpp  tui.cpp  tui.hpp
